samples/_failures_safe/1761200653_e8003e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce116825.c: In function ‘main’:
./samples/SAFE/__tmp_ce116825.c:173:9: error: expected expression at end of input
  173 |         if (input_len >
      |         ^~
./samples/SAFE/__tmp_ce116825.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce116825.c:173:9: error: expected declaration or statement at end of input
